# project-bootstrap

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REPOSTORY_MAP.md  SECURITY.md  language-adaptation.md  lychee.toml
.agents/: AGENTS.md  README.md
.claude/: AGENTS.md  README.md  settings.json
.codex/: AGENTS.md  README.md  hooks.json
.copilot/: AGENTS.md  README.md
.github/: AGENTS.md  CODEOWNERS  copilot-instructions.md
.opencode/: .gitignore  AGENTS.md  README.md
config/: README.md
diagrams/: README.md
docs/: 00-documentation-standards.md  00-source-of-truth.md  AGENTS.md  Architecture.md  INDEX.md  README.md
examples/: README.md
project-initialization/: AGENTS.md  README.md  contract.md  plan-template.md  review-checklist.md
prompts/: AGENTS.md  README.md  architecture-baseline.md  language-adaptation.md  project-bootstrap.md  refine-specs.md
scripts/: README.md  (+2 more)
src/: AGENTS.md  (+1 more)
tools/docs_validator/: Makefile  pyproject.toml
tools/docs_validator/src/docs_validator/: cli.py  parser.py  schema.py
tools/docs_validator/src/docs_validator/checks/: __init__.py  adr_coverage.py  staleness.py  supersession.py
tools/docs_validator/tests/: test_adr_coverage.py  test_cli.py  test_parser.py  test_schema.py  test_staleness.py  test_supersession.py
tools/docs_validator/tests/fixtures/: invalid_missing_audience.md  malformed_yaml.md  no_frontmatter.md  replacement.md  superseded_dangling.md  superseded_ok.md  valid.md
(+171 files in other folders)
