[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docs-validator"
version = "0.1.0"
description = "Validates frontmatter and structural integrity of Markdown documentation."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "python-frontmatter>=1.1,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
docs-validator = "docs_validator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docs_validator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
